syntax = "proto3";
package cluster;
option go_package = "github.com/rxanders35/sss/cluster";

message RegisterRequest {
    string http_addr = 1;
}

message RegisterResponse {
    bool success = 1;
}

message ReportStoreRequest {
  bytes object_id = 1; // 16-byte uuid
  string volume_server_addr = 2; 
}

message ReportStoreResponse {
  bool success = 1;
}

service ClusterService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc ReportStore(ReportStoreRequest) returns (ReportStoreResponse);
}